<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".MovieDetailsFragment">

        <androidx.constraintlayout.widget.Guideline
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/guideline2"
                app:layout_constraintGuide_percent="0.4"/>
        <ImageView
                android:id="@+id/iv_movieDetails_poster"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                app:layout_constraintDimensionRatio="1:1.5"
                android:scaleType="fitXY"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/bg_movie_default"
                android:contentDescription="@string/poster"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"/>

        <TextView
                android:id="@+id/movie_details_title_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/cell_text_style"
                tools:text="@string/title"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@+id/iv_movieDetails_poster"
                app:layout_constraintTop_toTopOf="@+id/iv_movieDetails_poster"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"/>

        <RatingBar
                android:id="@+id/rtb_movieDetails_rating"
                style="@style/RatingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:stepSize="0.1"
                app:layout_constraintStart_toStartOf="@+id/movie_details_title_tv"
                app:layout_constraintTop_toBottomOf="@+id/movie_details_title_tv"/>

        <TextView
                android:id="@+id/tv_movieDetails_overview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                style="@style/cell_text_style"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/iv_movieDetails_poster"
                app:layout_constraintTop_toBottomOf="@+id/iv_movieDetails_poster"/>

        <TextView
                android:id="@+id/tv_movieDetails_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                style="@style/cell_text_style"
                android:layout_marginEnd="8dp"
                tools:text="@string/rating_example"
                app:layout_constraintBottom_toBottomOf="@+id/rtb_movieDetails_rating"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/rtb_movieDetails_rating"
                app:layout_constraintTop_toTopOf="@+id/rtb_movieDetails_rating"/>

        <TextView
                android:id="@+id/tv_movieDetails_releaseDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                tools:text="@string/release_year"
                style="@style/cell_text_style"
                app:layout_constraintStart_toStartOf="@+id/rtb_movieDetails_rating"
                app:layout_constraintTop_toBottomOf="@+id/rtb_movieDetails_rating"/>

        <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/ib_movieDetails_imdb"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/transparent"
                android:scaleType="centerInside"
                app:layout_constraintDimensionRatio="w,1:1"
                app:layout_constraintStart_toStartOf="@+id/tv_movieDetails_releaseDate"
                app:layout_constraintTop_toBottomOf="@+id/tv_movieDetails_releaseDate"
                android:src="@drawable/ic_imdb"
                android:contentDescription="@string/imdb"
        />

        <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/ib_movieDetails_youtube"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/transparent"
                android:scaleType="centerInside"
                app:layout_constraintDimensionRatio="w,1:1"
                app:layout_constraintTop_toBottomOf="@+id/tv_movieDetails_releaseDate"
                app:srcCompat="@drawable/ic_youtube"
                android:contentDescription="@string/imdb"
                app:layout_constraintStart_toEndOf="@+id/ib_movieDetails_imdb"
                android:layout_marginStart="8dp"
        />
        <TextView
                android:text="@string/no_movie_selected"
                android:layout_width="0dp"
                tools:visibility="gone"
                style="@style/cell_text_style"
                android:gravity="center"
                android:background="@android:color/black"
                android:layout_height="0dp"
                android:id="@+id/tv_movieDetails_NoneSelectedCover"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

